# glrs-configurator

./: .gitignore  CLAUDE.md  README.md  task-breakdown.md
.github/workflows/: create-release.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: i18n.js  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/locales/: en.json  zh-CN.json
docs/: phase-0-baseline.md  update-mechanism.md
scripts/: configure-android-cleartext.mjs  set-release-version.mjs  sync-github-release-to-gitee.sh
