[package]
name = "gyro-elrs-configurator"
version = "0.1.0"
description = "Configurator for ELRS basic flight-control receivers"
authors = ["ExpressLRS"]
edition = "2021"

[lib]
name = "gyro_elrs_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

