[package]
name = "gyro-elrs-configurator"
version = "0.1.0"
description = "Configurator for ELRS basic flight-control receivers"
authors = ["ExpressLRS"]
edition = "2021"

[lib]
name = "gyro_elrs_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tauri-plugin-updater = "2"

[profile.release]
lto = false
